fix header z-index bug; remove autoprefixer since it will collapse with the fluidbox css

--- a/src/css/components/component.css
+++ b/src/css/components/component.css
@@ -6,7 +6,7 @@ header {
   left: 0;
   top: 0;
   width: 100%;
-  z-index: 4;
+  z-index: 1000;
   background: rgba(255,255,255,.8);
 }
 
